--- a/src/components/home/FormHome.css
+++ b/src/components/home/FormHome.css
@@ -3,6 +3,8 @@
   align-items: center;
   margin-left: 2%;
   margin-right: 2%;
+  justify-content: center;
+  gap: 20px;
 }
 
 .pokedex__btn {
@@ -28,11 +30,11 @@
 }
 
 .pokedex__input {
-  margin: 0 auto;
+  margin: 0;
   padding: 20px;
   width: 75%;
   max-width: 500px;
-  height: 100%;
+  height: 55px;
   border: none;
   font-weight: 500;
   font-size: 25px;
