--- a/src/components/pokedex/styles/InputSearch.css
+++ b/src/components/pokedex/styles/InputSearch.css
@@ -1,5 +1,6 @@
 .input__container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -12,6 +13,7 @@
   height: 40px;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding: 5px;
   border-radius: 5px;
   background-color: #D93F3F;
   color: white;
@@ -29,10 +31,11 @@
 }
 
 .input__search {
-  margin: 0 auto;
+  margin: 0 0 0 auto;
   padding: 20px;
-  width: 75%;
+  width: 50%;
   max-width: 500px;
+  min-width: 185px;
   height: 30px;
   border: none;
   font-weight: 500;
