--- a/src/components/pokedex/styles/Pagination.css
+++ b/src/components/pokedex/styles/Pagination.css
@@ -1,6 +1,8 @@
 .pagination {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 40px;
   width: max-content;
   display: flex;
   align-items: center;
