--- a/src/pages/styles/PokedexById.css
+++ b/src/pages/styles/PokedexById.css
@@ -141,6 +141,7 @@
 .pokeid__abilitie {
   justify-content: center;
   width: 140px;
+  margin-bottom: 10px;
   border-radius: 12px;
   text-align: center;
   font-size: 18px;
@@ -150,6 +151,7 @@
 }
 
 .pokeid__text {
+  margin: 10px auto 0 auto;
   width: 300px;
   height: 30px;
   text-align: center;
@@ -169,6 +171,13 @@
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
 }
 
+.pokeid__h2 {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+
 .progress {
   width: 80%;
   height: 20px;
@@ -177,6 +186,7 @@
   overflow: hidden;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 20px;
 }
 
 .progress__fill {
@@ -219,8 +229,8 @@
   height: 25px;
   border-radius: 8px;
   gap: 15px;
-  padding: 0;
-  margin: 0;
+  padding: 3px;
+  margin-top: 10px;
 }
 
 /* bg type color */
