--- a/src/components/pokedex/styles/Pagination.css
+++ b/src/components/pokedex/styles/Pagination.css
@@ -30,3 +30,16 @@
   color: white;
   border-radius: 5px;
 }
+
+@media (max-width: 375px)
+{
+  .pagination
+  {
+    width: 100%;
+    padding: 3px;
+  }
+  .pagination__container
+  {
+    gap: 2px
+  }
+}
