--- a/src/pages/styles/Header.css
+++ b/src/pages/styles/Header.css
@@ -26,3 +26,13 @@
   left: 10px;
   z-index: 2;
 }
+
+@media (max-width: 375px)
+{
+  .header-img
+  {
+    max-width: 360px;
+    padding: 0;
+    margin: 0;
+  }
+}
